# erlogging

./: LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
erlogging/: __init__.py
errutils/: emailer.py  erlogging.py  myEmail.config
errutils/tests/: level1.py  level2.py  level2b.py
